testdata/baselines/reference/submodule/conformance/assertionTypePredicates2.errors.txt
assertionTypePredicates2.js(10,12): error TS2304: Cannot find name 'A'.
assertionTypePredicates2.js(19,17): error TS2304: Cannot find name 'A'.


==== assertionTypePredicates2.js (2 errors) ====
    /**
     * @typedef {{ x: number }} A
     */
    
    /**
     * @typedef { A & { y: number } } B
     */
    
    /**
     * @param {A} a
               ~
!!! error TS2304: Cannot find name 'A'.
     * @returns { asserts a is B }
     */
    const foo = (a) => {
        if (/** @type { B } */ (a).y !== 0) throw TypeError();
        return undefined;
    };
    
    export const main = () => {
        /** @type { A } */
                    ~
!!! error TS2304: Cannot find name 'A'.
        const a = { x: 1 };
        foo(a);
    };
    